--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+########################################### Application Configurations #########################################################
+
 spring.application.name=BatchProcess
 server.port=8081
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/springdb2
@@ -10,6 +12,10 @@ spring.batch.jdbc.initialize-schema=always
 # logging.level.org.springframework.batch=DEBUG
 # logging.level.org.springframework.jdbc.core=TRACE
 
+
+
+############################################## Batch Configurations ############################################################
+SpringBatchChunkSize=5000
 
 
 
