--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,8 @@
-{"properties": [{
-  "name": "SpringBatchChunkSize",
-  "type": "java.lang.String",
-  "description": "A description for 'SpringBatchChunkSize'"
-}]}
+{"properties": [
+
+  {
+    "name": "spring.batch.chunkSize",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.batch.chunkSize'"
+  }
+]}
