--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.batch.jdbc.initialize-schema=always
 
 
 ############################################## Batch Configurations ############################################################
-SpringBatchChunkSize=5000
+spring.batch.chunkSize=3
 
 
 
